# amourAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  start.sh
backend/: blaxel.toml  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/agents/: __init__.py  clusterer.py  collector.py  evaluator.py  orchestrator.py  writer.py
backend/integrations/: __init__.py  model_gateway.py  whitecircle.py
backend/routes/: actions.py  competitors.py  monitoring.py  reports.py  sources.py  themes.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CompetitorLogo.tsx  EmptyState.tsx  Layout.tsx  Modal.tsx  ScoreBar.tsx  SentimentBadge.tsx  StatusBadge.tsx
frontend/src/pages/: Actions.tsx  Competitors.tsx  Dashboard.tsx  Monitoring.tsx  Reports.tsx  Sources.tsx  Themes.tsx
frontend/src/types/: index.ts
